# jiratempoaccounts

./: .gitignore  README.md  pylintrc  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: PatchCloudTempoAccounts.py  auth.py.template  jiraapi.py
